# Remote-monitoring-software

./: CMakeLists.txt  build.bat
client/: client.c  compile_client.bat  main.c  monitor_log.txt  network_utils.c  scanner.c  ui_manager.c  window_manager.c
client/header/: client.h  config.h  network_utils.h  scanner.h  ui_manager.h  window_manager.h
server/: bt.bat  process_manager.c  server.c  server_manager.c  ui_manager.c  window_manager.c
server/header/: config.h  process_manager.h  server_manager.h  ui_manager.h  window_manager.h
